Creating the page model

--- a/views/_layouts/header.ejs
+++ b/views/_layouts/header.ejs
@@ -74,6 +74,8 @@
       </div>
     </nav>
 
-    <div class="container"></div>
+    <div class="container">
+      <%- messages('messages', locals) %>
+    </div>
   </body>
 </html>
