--- a/views/_layouts/adminFooter.ejs
+++ b/views/_layouts/adminFooter.ejs
@@ -1,6 +1,8 @@
 
     </div><!-- /.container -->
-
+    <br><br><br>
+    <hr>
+    <p class="text-center">&copy; NB'sShoppingCart</p>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
   </body>
