--- a/views/admin/addPage.ejs
+++ b/views/admin/addPage.ejs
@@ -1,4 +1,4 @@
-<%- include("../_layouts/adminHeader") %> <br /><br /><br /><br />
+<%- include("../_layouts/adminHeader") %>
 <h2 class="page-title">Add a Page</h2>
 <a href="/admin/pages" class="btn btn-primary">Back to allpages</a>
 <br /><br />
