--- a/views/admin/pages.ejs
+++ b/views/admin/pages.ejs
@@ -3,9 +3,9 @@
 <a href="/admin/pages/addpage" class="btn btn-primary">Add a new page</a>
 <br /><br />
 
-<table class="table table-striped">
+<table class="table table-striped sorting">
   <thead>
-    <tr>
+    <tr class="home">
       <th>Title</th>
       <th>Edit</th>
       <th>Delete</th>
@@ -13,7 +13,7 @@
   </thead>
   <tbody>
     <% pages.forEach((page) => { %>
-    <tr>
+    <tr id="id_<%= page._id %>" class="<%= page.slug %>">
       <td><%= page.title %></td>
       <td><a href="/admin/pages/editPage/<%= page.slug %>">Edit</a></td>
       <% if (page.slug == "home") { %>
@@ -22,10 +22,22 @@
       <td><a href="/admin/pages/deletePage/<%= page._id %>">Delete</a></td>
       <% } %>
     </tr>
-    <% page %> <% }); %>
+    <% }); %>
   </tbody>
 </table>
 
 <br /><br />
+<script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
+<script>
+  $("tbody").sortable({
+    items: "tr:not('.home')",
+    placeholder: "ui-state-highlight",
+    update: function() {
+      var ids = $("tbody").sortable("serialize");
+      var url = "/admin/pages/reorderpage";
 
+      $.post(url, ids);
+    }
+  });
+</script>
 <%- include("../_layouts/adminFooter") %>
