--- a/views/_layouts/adminHeader.ejs
+++ b/views/_layouts/adminHeader.ejs
@@ -13,7 +13,7 @@
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     />
-    <link rel="stylesheet" href="/css/adminStyle.css" />
+    <link rel="stylesheet type="text/css" href="/css/adminStyle.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   </head>
 
