--- a/views/admin/pages.ejs
+++ b/views/admin/pages.ejs
@@ -15,11 +15,11 @@
     <% pages.forEach((page) => { %>
     <tr id="id_<%= page._id %>" class="<%= page.slug %>">
       <td><%= page.title %></td>
-      <td><a href="/admin/pages/editPage/<%= page.slug %>">Edit</a></td>
+      <td><a href="/admin/pages/editpage/<%= page.slug %>">Edit</a></td>
       <% if (page.slug == "home") { %>
       <td></td>
       <% } else { %>
-      <td><a href="/admin/pages/deletePage/<%= page._id %>">Delete</a></td>
+      <td><a href="/admin/pages/deletepage/<%= page._id %>">Delete</a></td>
       <% } %>
     </tr>
     <% }); %>
