--- a/views/_layouts/adminFooter.ejs
+++ b/views/_layouts/adminFooter.ejs
@@ -5,5 +5,7 @@
     <p class="text-center">&copy; NB'sShoppingCart</p>
 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script src="//cdn.ckeditor.com/4.14.0/standard/ckeditor.js"></script>
+    <script src="/js/main.js" type="text/javascript"></script>
   </body>
 </html>
