--- a/views/admin/pages.ejs
+++ b/views/admin/pages.ejs
@@ -19,7 +19,13 @@
       <% if (page.slug == "home") { %>
       <td></td>
       <% } else { %>
-      <td><a href="/admin/pages/deletepage/<%= page._id %>">Delete</a></td>
+      <td>
+        <a
+          class="confirmDeletion"
+          href="/admin/pages/deletepage/<%= page._id %>"
+          >Delete</a
+        >
+      </td>
       <% } %>
     </tr>
     <% }); %>
