--- a/views/_layouts/adminHeader.ejs
+++ b/views/_layouts/adminHeader.ejs
@@ -36,7 +36,12 @@
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
             <a class="nav-link" href="/admin/pages"
-              >Pages <span class="sr-only">(current)</span></a
+              >Pages</a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/admin/categories"
+              >Categories</a
             >
           </li>
         </ul>
