--- a/views/admin/pages.ejs
+++ b/views/admin/pages.ejs
@@ -15,7 +15,7 @@
     <% pages.forEach((page) => { %>
     <tr id="id_<%= page._id %>" class="<%= page.slug %>">
       <td><%= page.title %></td>
-      <td><a href="/admin/pages/editpage/<%= page.slug %>">Edit</a></td>
+      <td><a href="/admin/pages/editpage/<%= page._id %>">Edit</a></td>
       <% if (page.slug == "home") { %>
       <td></td>
       <% } else { %>
