--- a/views/_layouts/adminHeader.ejs
+++ b/views/_layouts/adminHeader.ejs
@@ -44,6 +44,11 @@
               >Categories</a
             >
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/admin/products"
+              >Products</a
+            >
+          </li>
         </ul>
         <!-- <form class="form-inline my-2 my-lg-0">
           <input
