--- a/views/admin/editProduct.ejs
+++ b/views/admin/editProduct.ejs
@@ -94,12 +94,19 @@
   <% }) %>
 </ul>
 <br><br>
-<form action="/admin/products/productgallery/<%= id %>/" method="POST" enctype="multipart/form-data" class="dropzone" id="dropzoneForm"></form>
+<form action="/admin/products/productgallery/<%= id %>/" method="POST" enctype="multipart/form-data" class="dropzone" id="dropzoneForm">
+  <div class="fallback">
+    <input type="file" name="file" multiple>
+    <input type="submit" value="Upload">
+  </div>
+</form>
 
 
 <br /><br />
 
 <script>
+
+  // Image preview
   /*********************************Error************************************************/
   // function readURL(input) {
   //   if (input.files && input.files[0]) {
@@ -122,9 +129,9 @@
   document.querySelector("#img").addEventListener("change", function() {
     // user selected file
     var file = this.files[0];
-    if (file == undefined) {
-      _PREVIEW_URL = "#";
-    } else {
+    // if (file == undefined) {
+    //   _PREVIEW_URL = "#";
+    // } else {
       // validate file size
       if (file.size > 2 * 1024 * 1024) {
         alert("Error : Exceeded size 2MB");
@@ -135,7 +142,7 @@
 
       // object url
       _PREVIEW_URL = URL.createObjectURL(file);
-    }
+    // }
 
     // set src of image and show
     document.querySelector("#imgPreview").setAttribute("src", _PREVIEW_URL);
@@ -143,16 +150,21 @@
   });
 
   // Dropzone
+
+document.addEventListener("DOMContentLoaded", function() {
   Dropzone.options.dropzoneForm = {
-    acceptedFiles: "image/*", //all image files will be accepted and nothing else
-    init: () => {
-      this.on('queuecomplete', (file) => {
-        setTimeout(() => {
-          location.reload()
-        }, 1000)
-      })
+    acceptedFiles: "image/*",
+    autoProcessQueue: true, 
+    init: function () {
+      this.on("queuecomplete", function (file) {
+          setTimeout(() => {
+            location.reload()
+          }, 1000)
+      });
     }
   }
+});
+
 </script>
 
 <%- include("../_layouts/adminFooter") %>
