--- a/views/_layouts/header.ejs
+++ b/views/_layouts/header.ejs
@@ -17,7 +17,7 @@
 
   <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-      <a class="navbar-brand" href="#">Navbar</a>
+      <a class="navbar-brand" href="/">NB's Shopping Cart</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -32,33 +32,13 @@
 
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#"
-              >Home <span class="sr-only">(current)</span></a
-            >
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="#">Disabled</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a
-              class="nav-link dropdown-toggle"
-              href="http://example.com"
-              id="dropdown01"
-              data-toggle="dropdown"
-              aria-haspopup="true"
-              aria-expanded="false"
-              >Dropdown</a
-            >
-            <div class="dropdown-menu" aria-labelledby="dropdown01">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <a class="dropdown-item" href="#">Something else here</a>
-            </div>
-          </li>
+          <% pages.forEach((page) => { %>
+            <% if(page.slug == "home"){ %>
+              <li class="nav-item"><a class="nav-link" href="/"><%= page.title %></a></li>
+            <% } else{ %>
+              <li class="nav-item"><a class="nav-link" href="<%= page.slug %>"><%= page.title %></a></li>
+            <% } %>
+          <% }) %>
         </ul>
         <!-- <form class="form-inline my-2 my-lg-0">
           <input
