--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,3 @@
-<!-- <% include('_layouts/adminHeader'); %>
-<h1>Hello There</h1>
-<% include('_layouts/adminFooter'); %> -->
-
-<%- include("./_layouts/header") %>
-<h1>Hello There</h1>
+<%- include("./_layouts/header") %> 
+<%- content %> 
 <%- include("./_layouts/footer") %>
