Front display categories

--- a/views/_layouts/header.ejs
+++ b/views/_layouts/header.ejs
@@ -57,4 +57,17 @@
     <div class="container">
       <br /><br /><br /><br />
       <%- messages('messages', locals) %>
+      <div class="row">
+        <div class="col-xs-12 col-md-3">
+          <h3>Categories</h3>
+          <ul class="list-group">
+            <li class="list-group-item"><a href="/products">All Products</a></li>
+            <% categories.forEach((cat) => { %>
+            <li class="list-group-item"><a href="/products/<%= cat.slug %>"><%= cat.title %></a></li>
+          <% }) %>
+          </ul>
+        </div>
+        <div class="col-xs-12 col-md-1"></div>
+        <div class="col-xs-12 col-md-8">
+        
     
