--- a/views/_layouts/footer.ejs
+++ b/views/_layouts/footer.ejs
@@ -1,7 +1,13 @@
-
+  
+        </div>
+      </div>
     </div><!-- /.container -->
+    <br><br><br>
+    <hr>
+    <p class="text-center">&copy; NB'sShoppingCart</p>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script src="/js/main.js" type="text/javascript"></script>
   </body>
 </html>
