Display products details

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,3 +11,13 @@ a.productblock {
   margin-top: 20px;
   margin-bottom: 20px;
 }
+
+img.productImage {
+  width: 100%;
+}
+
+ul.gallery li {
+  display: inline-block;
+  margin: 20px;
+  list-style: none;
+}
