--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -36,7 +36,7 @@
   </tr>
   <tr>
     <td colspan="5" align="right">
-      <a class="btn btn-danger" href="/cart/clear">Clear Cart</a>
+      <a class="clearcart btn btn-danger" href="/cart/clear">Clear Cart</a>
     </td>
     <td colspan="5" align="right">
       <a class="btn btn-primary buynow" href="#">Buy Now</a>
@@ -46,4 +46,14 @@
 
 <% } else { %>
 <h3 class="text-center">Your cart is empty.</h3>
-<% } %> <%- include("./_layouts/footer") %>
+<% } %>
+
+<script>
+  $(function() {
+    $("a.clearcart").on("click", () => {
+      if (!confirm("Confirm Clear Cart!")) return false;
+    });
+  });
+</script>
+
+<%- include("./_layouts/footer") %>
