--- a/views/catProducts.ejs
+++ b/views/catProducts.ejs
@@ -13,7 +13,7 @@
       />
     </a>
     <h3><%= product.title %></h3>
-    <h5>$<%= parseFloat(product.price).toFixed(2) %></h5>
+    <h5>Rs. <%= parseFloat(product.price).toFixed(2) %></h5>
     <a href="/products/<%= product.category %>/<%= product.slug %>"
       >View Details</a
     >
