--- a/views/product.ejs
+++ b/views/product.ejs
@@ -12,7 +12,7 @@
   </div>
   <div class="col-xs-12 col-md-7">
     <p><%= product.desc %></p>
-    <p>$<%= parseFloat(product.price).toFixed(2) %></p>
+    <p>Rs. <%= parseFloat(product.price).toFixed(2) %></p>
     <p><a href="/cart/add/<%= product.slug %>">Add to cart</a></p>
   </div>
   <div class="col-xs-12">
