--- a/views/_layouts/header.ejs
+++ b/views/_layouts/header.ejs
@@ -20,6 +20,12 @@
   </head>
 
   <body>
+    <div class="ajaxbg">
+      <div class="ajaxinner">
+        <h3>You are now being redirected to paypal...</h3>
+        <img src="/images/ajax-loader.gif" alt="">
+      </div>
+    </div>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
       <a class="navbar-brand" href="/">NB's Shopping Cart</a>
       <button
