--- a/views/_layouts/header.ejs
+++ b/views/_layouts/header.ejs
@@ -61,6 +61,8 @@
               <% } %>
             )</a>
           </li>
+          <li><a class="nav-link" href="/users/register">Register</a></li>
+          <li><a class="nav-link" href="/users/login">Login</a></li>
         </ul>
         <!-- <form class="form-inline my-2 my-lg-0">
           <input
