--- a/views/_layouts/header.ejs
+++ b/views/_layouts/header.ejs
@@ -81,6 +81,12 @@
     <div class="container">
       <br /><br /><br /><br />
       <%- messages('messages', locals) %>
+      <% if(errors) { %>
+       <% errors.forEach(function(error){ %>
+      <div class="alert alert-danger">
+        <%= error.msg %>
+      </div>
+      <% }); %> <% } %>
       <div class="row">
         <div class="col-xs-12 col-md-3">
           <h3>Categories</h3>
