--- a/views/product.ejs
+++ b/views/product.ejs
@@ -13,7 +13,11 @@
   <div class="col-xs-12 col-md-7">
     <p><%= product.desc %></p>
     <p>Rs. <%= parseFloat(product.price).toFixed(2) %></p>
+    <% if(loggedIn) { %>
     <p><a href="/cart/add/<%= product.slug %>">Add to cart</a></p>
+    <% } else { %>
+    <p>You must be logged in to purchase items</p>
+    <% } %>
   </div>
   <div class="col-xs-12">
     <ul class="gallery">
