--- a/views/register.ejs
+++ b/views/register.ejs
@@ -18,7 +18,7 @@
       type="text"
       name="username"
       class="form-control"
-      placeholder="Usernme"
+      placeholder="Username"
     />
   </div>
 
