--- a/public/css/style.css
+++ b/public/css/style.css
@@ -51,3 +51,9 @@ table.alignmiddle td {
   transform: translate(-50%, -50%);
   text-align: center;
 }
+
+.alert-error {
+  color: #721c24;
+  background-color: #f8d7da;
+  border-color: #f5c6cb;
+}
