--- a/views/_layouts/adminHeader.ejs
+++ b/views/_layouts/adminHeader.ejs
@@ -52,6 +52,13 @@
             >
           </li>
         </ul>
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="/users/logout"
+              >Logout</a
+            >
+          </li>
+        </ul>
         <!-- <form class="form-inline my-2 my-lg-0">
           <input
             class="form-control mr-sm-2"
