--- a/views/_layouts/header.ejs
+++ b/views/_layouts/header.ejs
@@ -7,6 +7,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta http-equiv="X-US-Compatible" content="IE-edge" />
+    <link rel='icon' href='/images/shopping-cart.ico' type='image/x-icon'/ >
 
     <title><%= title %></title>
     <link
